--- a/lab1/src/res/cfg/X-config.json
+++ b/lab1/src/res/cfg/X-config.json
@@ -1,10 +1,10 @@
 {
-    "NODES":"res/nodes.json",
-    "PLOTNAME":"res/plots/lagrange-perturbed-X-subset",
+    "NODES":"res/cfg/nodes.json",
+    "PLOTNAME":"res/plots/spline-perturbed-X",
     "VECTORS": 1000,
     "MEAN": 0,
     "SD": 1e-2,
     "q": 0.99,
-    "BOUNDS":[0, 0.95],
+    "BOUNDS":[0.05, 0.95],
     "STEP":0.001
 }
